syntax = "proto3";

package products;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";


// Product message definition
message Product {
  int64 id = 1;
  int64 category_id = 2;
  string name = 3;
  string description = 4;
  float price = 5;
  int32 stock = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Category {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;

}
// Service definition for managing products and categories
service ProductService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

// Request and response messages for product operations
message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  int32 stock = 4;
  int64 category_id = 5;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  int64 product_id = 2;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {
  int64 category_id = 1;
  string cursor = 2;     
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  string next_cursor = 2; 
}


// Request and response messages for category operations
message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CreateCategoryResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetCategoryRequest {
  int64 id = 1;
}

message GetCategoryResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
}